--- a/app/src/main/res/layout/activity_advertise.xml
+++ b/app/src/main/res/layout/activity_advertise.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
             android:id="@+id/img_camera"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/img_camera_height"
-            android:src="@drawable/img_default" />
+            android:src="@drawable/img_default"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,7 +27,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/gps_address"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <EditText
                 android:id="@+id/et_gps_address"
@@ -35,7 +35,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/default_padding"
                 android:background="@drawable/rectangle_bg"
-                android:paddingLeft="@dimen/default_padding" />
+                android:enabled="false"
+                android:paddingLeft="@dimen/default_padding"/>
 
         </LinearLayout>
 
@@ -51,7 +52,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/address"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <EditText
                 android:id="@+id/et_address"
@@ -60,7 +61,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/rectangle_bg"
-                android:paddingLeft="@dimen/default_padding" />
+                android:paddingLeft="@dimen/default_padding"/>
 
         </LinearLayout>
 
@@ -76,7 +77,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/title"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <EditText
                 android:id="@+id/et_title"
@@ -85,7 +86,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/rectangle_bg"
-                android:paddingLeft="@dimen/default_padding" />
+                android:paddingLeft="@dimen/default_padding"/>
 
         </LinearLayout>
 
@@ -101,16 +102,16 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/type"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <Spinner
                 android:id="@+id/spnr_type"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
-                android:background="@drawable/rectangle_bg"
+
                 android:paddingLeft="@dimen/default_padding"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"/>
 
         </LinearLayout>
 
@@ -118,7 +119,7 @@
             android:id="@+id/chk_revise"
             android:layout_width="100dp"
             android:layout_height="@dimen/section_height"
-            android:text="@string/revise" />
+            android:text="@string/revise"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -132,7 +133,7 @@
                 android:layout_gravity="center_vertical"
                 android:text="@string/note"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <EditText
                 android:id="@+id/et_note"
@@ -141,7 +142,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
                 android:background="@drawable/rectangle_bg"
-                android:paddingLeft="@dimen/default_padding" />
+                android:paddingLeft="@dimen/default_padding"/>
 
         </LinearLayout>
 
@@ -160,7 +161,7 @@
                 android:text="@string/send"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
 
             <Button
                 android:id="@+id/btn_save"
@@ -172,7 +173,7 @@
                 android:text="@string/save"
                 android:textAllCaps="false"
                 android:textColor="@color/black"
-                android:textSize="@dimen/txt_size" />
+                android:textSize="@dimen/txt_size"/>
         </LinearLayout>
 
     </LinearLayout>
